--- a/.devcontainer/dockerfile
+++ b/.devcontainer/dockerfile
@@ -9,7 +9,7 @@ RUN mkdir -p ~/.vscode-server/extensions
 RUN mkdir -p ~/.vscode-server-insiders/extensions
 
 # Install utilitites
-RUN dnf install -y tar gzip
+RUN dnf install -y tar gzip git
 
 RUN pip3 install ipykernel
 
