--- a/dockerfile_celery
+++ b/dockerfile_celery
@@ -15,6 +15,9 @@ COPY python/ /app/
 # Install extensions
 RUN python3 prepare.py
 
+ENV TZ=America/New_York
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
 EXPOSE 8000
 
 ENV PYTHONPATH="/app:$PATH"
