--- a/dockerfile_celery
+++ b/dockerfile_celery
@@ -14,7 +14,7 @@ RUN pip3 install -r requirements.txt
 COPY python/ /app/
 
 # Install extensions
-RUN python3 prepare.py
+# RUN python3 prepare.py
 
 ENV TZ=America/New_York
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
