--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,6 +1,10 @@
 version: '3'
 
 services:
+  redis:
+    image: redis
+    ports:
+      - "6389:6379"
   finance:
     # Uncomment the next line to use a non-root user for all processes.
     build: 
@@ -23,6 +27,8 @@ services:
      - SYS_PTRACE
     security_opt:
       - seccomp:unconfined
+    depends_on:
+      - redis      
 volumes:
   vscodeextensions:
   vscodeinsiderextensions:
